# canorus

./: .cdtbuild  .cdtproject  .gitignore  .project  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.9-pre1  DEVELOPERS  NEWS  README  VERSION  canorus-cmake-format.yaml  canorus.desktop  graphicsscene2_plan.txt  large-warn-fixes.txt  travis-build.sh  windows-build.bat
branches/scripting/: CMakeLists.txt  README
src/: CAMainWin.h  CMakeLists.txt  CMakeListsQt4.txt  CanorusPython.py  canorus.cpp  canorus.h  clef.h  context.h  document.cpp  document.h  drawable.h  drawableclef.cpp  drawablemuselement.h  drawablenote.cpp  drawablenote.h  drawablestaff.cpp  drawablestaff.h  engraver.cpp  engraver.h  kdtree.cpp  kdtree.h  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui  muselement.cpp  muselement.h  note.cpp  note.h  playable.cpp  playable.h  playback.cpp  rtmididevice.h  scoreviewport.cpp  scoreviewport.h  scrollwidget.cpp  scrollwidget.h  sheet.cpp  sheet.h  staff.cpp  (+6 more)
src/control/: editorctl.h  externprogram.cpp  externprogram.h  helpctl.cpp  helpctl.h  mainwinprogressctl.cpp  mainwinprogressctl.h  previewctl.cpp  previewctl.h  printctl.cpp  printctl.h  resourcectl.cpp  resourcectl.h  stylusctl.cpp  stylusctl.h  typesetctl.cpp  typesetctl.h
src/core/: actiondelegate.cpp  actiondelegate.h  archive.cpp  archive.h  articulation.cpp  articulation.h  autorecovery.cpp  autorecovery.h  barline.cpp  barline.h  canorus.cpp  canorus.h  canorusml.cpp  canorusml.h  clef.cpp  clef.h  context.cpp  context.h  crescendo.cpp  crescendo.h  diatonickey.cpp  diatonickey.h  diatonicpitch.cpp  diatonicpitch.h  document.cpp  document.h  dynamic.cpp  dynamic.h  fermata.cpp  file.cpp  file.h  fileformats.cpp  fileformats.h  fingering.cpp  fingering.h  functionmark.cpp  functionmark.h  functionmarking.cpp  functionmarking.h  functionmarkingcontext.cpp  (+62 more)
src/drawable/: drawable.cpp  drawable.h  drawableaccidental.cpp  drawablebarline.cpp  drawablebarline.h  drawableclef.cpp  drawableclef.h  drawablecontext.cpp  drawablecontext.h  drawablefunctionmarkcontext.h  drawablefunctionmarking.cpp  drawablefunctionmarking.h  drawablefunctionmarkingcontext.cpp  drawablefunctionmarkingcontext.h  drawablekeysignature.cpp  drawablekeysignature.h  drawablelyricscontext.cpp  drawablelyricscontext.h  drawablemark.cpp  drawablemark.h  drawablemuselement.cpp  drawablemuselement.h  drawablenote.cpp  drawablenote.h  drawablerest.cpp  drawablerest.h  drawableslur.cpp  drawableslur.h  drawablestaff.cpp  drawablestaff.h  drawablesyllable.cpp  drawablesyllable.h  drawabletimesignature.cpp  drawabletimesignature.h
src/export/: absexport.h  canexport.cpp  canexport.h  canorusmlexport.cpp  canorusmlexport.h  export.cpp  export.h  lilypondexport.cpp  lilypondexport.cpp.orig  lilypondexport.h  midiexport.cpp  midiexport.h  musicxmlexport.cpp  musicxmlexport.h  pdfexport.cpp  pdfexport.h  svgexport.cpp  svgexport.h
src/import/: canimport.cpp  canimport.h  canorusmlimport.cpp  canorusmlimport.h  import.cpp  import.h  lilypondimport.cpp  lilypondimport.h  midiimport.cpp  midiimport.h  musicxmlimport.cpp  musicxmlimport.h  mxlimport.cpp  mxlimport.h
src/interface/: engraver.cpp  keybdinput.cpp  keybdinput.h  mididevice.cpp  mididevice.h  playback.cpp  playback.h  plugin.cpp  plugin.h  pluginaction.cpp  pluginaction.h  pluginmanager.cpp  pluginmanager.h  plugins_swig.cpp  plugins_swig.h  pyconsoleinterface.cpp  pyconsoleinterface.h  rtmididevice.cpp  rtmididevice.h
src/lang/: README.Translators  README.md  cs.ts  da.ts  de.ts  de_DE.ts  dk.ts  fr.ts  he.ts  he_IL.ts  hu.ts  it.ts  nb.ts  nl.ts  ru.ts  sl.ts  sl_SI.ts  sv.ts  template.ts  uk.ts  zh.ts
src/layout/: drawable.cpp  drawable.h  drawableaccidental.cpp  drawableaccidental.h  drawablebarline.cpp  drawablebarline.h  drawablechordname.cpp  drawablechordname.h  drawablechordnamecontext.cpp  drawablechordnamecontext.h  drawableclef.cpp  drawableclef.h  drawablecontext.cpp  drawablecontext.h  drawablefiguredbasscontext.cpp  drawablefiguredbasscontext.h  drawablefiguredbassmark.cpp  drawablefiguredbassnumber.cpp  drawablefiguredbassnumber.h  drawablefunctionmark.cpp  drawablefunctionmark.h  drawablefunctionmarkcontext.cpp  drawablefunctionmarkcontext.h  drawablekeysignature.cpp  drawablekeysignature.h  drawablelyricscontext.cpp  drawablelyricscontext.h  drawablemark.cpp  drawablemark.h  drawablemidinote.cpp  drawablemidinote.h  drawablemuselement.cpp  drawablemuselement.h  drawablenote.cpp  drawablenote.h  drawablenotecheckererror.cpp  drawablenotecheckererror.h  drawablerest.cpp  drawablerest.h  drawableslur.cpp  (+12 more)
src/rtmidi/: RtMidi.h
src/score/: articulation.cpp  articulation.h  barline.cpp  barline.h  bookmark.cpp  bookmark.h  chordname.cpp  chordname.h  chordnamecontext.cpp  chordnamecontext.h  clef.cpp  clef.h  context.cpp  context.h  crescendo.cpp  crescendo.h  diatonickey.cpp  diatonickey.h  diatonicpitch.cpp  diatonicpitch.h  document.cpp  document.h  dynamic.cpp  dynamic.h  fermata.cpp  fermata.h  figuredbasscontext.cpp  figuredbasscontext.h  figuredbassmark.cpp  figuredbassmark.h  fingering.cpp  fingering.h  functionmark.cpp  functionmark.h  functionmarkcontext.cpp  functionmarkcontext.h  instrumentchange.cpp  instrumentchange.h  interval.cpp  interval.h  (+44 more)
src/scorectl/: dummyctl.cpp  dummyctl.h  keysignaturectl.cpp  keysignaturectl.h
src/scoreui/: dummyui.cpp  dummyui.h  keysignatureui.cpp  keysignatureui.h
src/scripting/: barline.i  canoruslibrary.i  canoruspython.i  canorusruby.i  clef.i  context.i  document.i  functionmarking.i  functionmarkingcontext.i  importexport.i  keysignature.i  mark.i  mididevice.i  muselement.i  note.i  playable.i  plugins.i  resources.i  rest.i  rtmididevice.i  score.i  sheet.i  staff.i  swigpython.cpp  swigpython.h  swigruby.cpp  swigruby.h  syllable.i  timesignature.i  voice.i
src/scripts/: newdocument.py  newdocument.rb
src/tests/: lilypond-articulation-marks-and-breathe-test.xml  lilypond-tempo-mark-text.xml  score-barlines.xml  score-breath.xml  score-lyrics-stanza-number.xml
(+1886 files in other folders)
